fix(Minecraft): items aligning under each other and not next to each other

--- a/styles/components/projectCard.scss
+++ b/styles/components/projectCard.scss
@@ -1,3 +1,12 @@
+.project-list {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, 320px);
+	justify-content: center;
+	grid-gap: 20px;
+	width: 100%;
+	height: 100%;
+}
+
 .project-card {
 	background-color: #464646;
 	max-width: 500px;
