--- a/styles/minecraft.scss
+++ b/styles/minecraft.scss
@@ -1,6 +1,5 @@
 .projects {
 	margin-top: 6rem;
-	max-width: 500px;
 
 	margin-left: auto;
 	margin-right: auto;
